--- a/templates/index.html
+++ b/templates/index.html
@@ -7,11 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="./constants.js"  type="module" ></script>
-    <script src="./script.js"   type="module" ></script>
+    <script src="{{ url_for('static', filename='scripts/constants.js') }}"  type="module" ></script>
+    <script src="{{ url_for('static', filename='scripts/script.js') }}"   type="module" ></script>
     <title>Schedule Generator</title>
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='images/favicon.x-icon') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles/style.css') }}">
   </head>
 
   <body>
