--- a/templates/custom-message.html
+++ b/templates/custom-message.html
@@ -7,10 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="constants.js"  type="module" ></script>
-    <script src="custom-message.js"  type="module" ></script>
+    <script src="{{ url_for('static', filename='scripts/constants.js') }}"  type="module" ></script>
+    <script src="{{ url_for('static', filename='scripts/custom-message.js') }}"  type="module" ></script>
     <title>Generate Custom Message helper</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles/style.css') }}">
 </head>
 
 <body>
