--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
     <script src="{{ url_for('static', filename='scripts/constants.js') }}"  type="module" ></script>
     <script src="{{ url_for('static', filename='scripts/script.js') }}"   type="module" ></script>
     <title>Schedule Generator</title>
-    <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='images/favicon.x-icon') }}">
+    <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='images/favicon.ico') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='styles/style.css') }}">
   </head>
 
